Fix flicker on background gradient transition

--- a/src/App.css
+++ b/src/App.css
@@ -215,18 +215,27 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  outline: 1px solid var(--color-green);
+  outline: 2px solid var(--color-green);
 }
 
 .square {
   position: relative;
-  height: 8.33%;
-  width: 8.33%;
+  height: calc(8.33% - 3px);
+  width: calc(8.33% - 3px);
   display: flex;
   justify-content: center;
   align-items: center;
-  outline: 2px solid black;
-  transition: background 100ms ease-out;
+  border: 1.5px solid black;
+  transition: background-color 200ms ease-out;
+}
+
+.enemy-capture {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .piece {
